feat: add skip parameter to words endpoint
